<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:gravity="center_horizontal"
  android:orientation="vertical"
  android:padding="16dp"
  tools:context="com.example.murodjonrahimov.finalassessment.LoginActivity">

    <ProgressBar
      android:id="@+id/login_progress"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:visibility="gone"
      style="?android:attr/progressBarStyleLarge"/>

    <ScrollView
      android:id="@+id/login_form"
      android:layout_width="match_parent"
      android:layout_height="match_parent">

        <LinearLayout
          android:id="@+id/email_login_form"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

                <EditText
                  android:id="@+id/email"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/email"
                  android:inputType="textEmailAddress"
                  android:maxLines="1"
                  android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

                <EditText
                  android:id="@+id/password"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/prompt_password"
                  android:imeActionId="6"
                  android:imeActionLabel="Sign in"
                  android:imeOptions="actionUnspecified"
                  android:inputType="textPassword"
                  android:maxLines="1"
                  android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <Button
              android:id="@+id/email_sign_in_button"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="16dp"
              android:text="@string/submit"
              android:textStyle="bold"
              style="?android:textAppearanceSmall"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
