<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:layout_margin="16dp">

    <LinearLayout
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      tools:context="com.volha.finalapp.BREEDS_KEYActivity">

        <TextView
          android:id="@+id/greeting"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="16dp"/>

        <android.support.v7.widget.CardView
          android:id="@+id/springer_card"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="16dp">

            <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal">

                <TextView
                  android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_weight="4"
                  android:gravity="center_vertical"
                  android:text="@string/springer"
                  android:textSize="22sp"/>

                <ImageView
                  android:id="@+id/springer"
                  android:layout_width="0dp"
                  android:layout_height="110dp"
                  android:layout_weight="4"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
          android:id="@+id/sheepdog_card"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="16dp">

            <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal">

                <TextView
                  android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_weight="4"
                  android:gravity="center_vertical"
                  android:text="@string/sheepdog"
                  android:textSize="22sp"/>

                <ImageView
                  android:id="@+id/sheepdog"
                  android:layout_width="0dp"
                  android:layout_height="110dp"
                  android:layout_weight="4"
                />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
          android:id="@+id/retriever_card"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="16dp">

            <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal">

                <TextView
                  android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_weight="4"
                  android:gravity="center_vertical"
                  android:text="@string/retriever"
                  android:textSize="22sp"
                />

                <ImageView
                  android:id="@+id/retriever"
                  android:layout_width="0dp"
                  android:layout_height="110dp"
                  android:layout_weight="4"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
          android:id="@+id/hound_card"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="16dp">

            <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal">

                <TextView
                  android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_weight="4"
                  android:gravity="center_vertical"
                  android:text="@string/hound"
                  android:textSize="22sp"/>

                <ImageView
                  android:id="@+id/hound"
                  android:layout_width="0dp"
                  android:layout_height="110dp"
                  android:layout_weight="4"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>